feat: add custom query
